# WorldBuildr

./: CMakeLists.txt  README.md
doc/: EMT-INF3-CR02_TutorielGameFramework.docx  EMT-INF3-CR03_TutorielGameFramework_BrickBreaker.docx  UML.vsdx  UML_sequence_quit.vsdx  schemas.vsdx
doc/html/: annotated.html  class_game_canvas-members.html  class_game_canvas.html  class_game_core-members.html  class_game_core.html  class_game_scene-members.html  class_game_scene.html  class_game_view-members.html  class_game_view.html  class_main_frm-members.html  class_main_frm.html  class_sprite-members.html  class_sprite.html  class_sprite_tick_handler-members.html  class_sprite_tick_handler.html  classes.html  files.html  functions.html  functions_enum.html  functions_eval.html  functions_func.html  functions_prop.html  functions_rela.html  functions_vars.html  gamecanvas_8cpp.html  gamecanvas_8cpp_source.html  gamecanvas_8h.html  gamecanvas_8h_source.html  gamecore_8cpp.html  gamecore_8cpp_source.html  gamecore_8h.html  gamecore_8h_source.html  gamescene_8cpp.html  gamescene_8cpp_source.html  gamescene_8h.html  gamescene_8h_source.html  gameview_8cpp.html  gameview_8cpp_source.html  gameview_8h.html  gameview_8h_source.html  (+34 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_16.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_b.js  classes_c.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_3.js  functions_0.js  functions_1.js  functions_11.js  functions_12.js  functions_13.js  functions_14.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  (+11 more)
exportFiles/: LevelLoader.cpp  LevelLoader.h
exportableFiles/: LevelLoader.cpp  LevelLoader.h
res/style/: buttonStyle.qss
res/styles/: buttonStyle.qss  checkboxStyle.qss  comboboxStyle.qss  editField.qss  groupBoxStyle.qss  listwidgetStyle.qss  spinboxStyle.qss
scripts/: _generate_new_project.ps1  generate_cmake_release.bat  generate_exe.bat  generate_release.bat
src/: Doxyfile  WorldBuild.pro  WorldBuildr.pro  gamecanvas.cpp  gamecanvas.h
src/GameFramework/: gamecanvas.cpp  gamecanvas.h  gamecore.cpp  gamescene.cpp  gamescene.h  gameview.cpp  gameview.h  main.cpp  mainfrm.cpp  mainfrm.h  mainfrm.ui  resources.cpp  resources.h  sprite.cpp  sprite.h
src/WorldBuildrEditor/: EditorHistory.cpp  EditorHistory.h  EditorManager.cpp  EditorManager.h  EditorSprite.cpp  EditorSprite.h  SaveFileManager.cpp  SaveFileManager.h  SelectionZone.cpp  SelectionZone.h  TagsManager.cpp  TagsManager.h  gamecore.cpp  gamecore.h
src/WorldBuildrGame/: EditorHistory.cpp  EditorHistory.h  EditorManager.cpp  EditorManager.h  EditorSprite.cpp  EditorSprite.h  SelectionZone.cpp  SelectionZone.h  gamecore.cpp  gamecore.h
src/WorldBuildrUi/: ActionPanel.cpp  ActionPanel.h  EditorActionPanel.cpp  EditorActionPanel.h  EditorButton.cpp  EditorButton.h  EditorHud.cpp  EditorHud.h  EditorHudScene.cpp  EditorHudScene.h  EditorUi.cpp  EditorUi.h  SceneEditDialog.cpp  SceneEditDialog.h  SpriteDetailsPanel.cpp  SpriteDetailsPanel.h  TagEditDialog.cpp  TagEditDialog.h
